--- a/ZM Chameleon/css/watch-content-stylesheet.css
+++ b/ZM Chameleon/css/watch-content-stylesheet.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: digitalFont;
-    src: url('chrome-extension://ghpgiidkidgnlfaaffjdphmpolpkgpgd/fonts/Digital7-1e1Z.ttf'); 
+    src: url('chrome-extension://__MSG_@@extension_id__/fonts/Digital7-1e1Z.ttf'); 
 }
 
 #recordDiv {
