Add version and link to github in options page.
And change margin styling

--- a/ZM Chameleon/css/options-stylesheet.css
+++ b/ZM Chameleon/css/options-stylesheet.css
@@ -13,6 +13,14 @@ body {
     cursor: ew-resize;
 }
 
+h3, h4, a, input {
+    margin: 0em .5em;
+}
+
+h3.warning {
+    margin: 2em;
+}
+
 button#save {
     width: 100px;
     height: 25px;
