--- a/css/options-stylesheet.css
+++ b/css/options-stylesheet.css
@@ -13,12 +13,16 @@ body {
     cursor: ew-resize;
 }
 
-h3, h4, a, input {
-    margin: 0em .5em;
+h3, h4, input  {
+    margin: .45em;
+}
+
+input[type="checkbox"] {
+    margin: 0em;
 }
 
 h3.warning {
-    margin: 2em;
+    margin: 1.2em;
 }
 
 button#save {
