Add disable record button on alert et al.
Other code changes too. Only send information to the popup that it needs instead of sending all of the apps settings when the popup opens.

Added a better way to load functions when the montage opens.

Css style changes for the margins.

--- a/css/options-stylesheet.css
+++ b/css/options-stylesheet.css
@@ -14,11 +14,7 @@ body {
 }
 
 h3, h4, input  {
-    margin: .45em;
-}
-
-input[type="checkbox"] {
-    margin: 0em;
+    margin: .45em .45em .45em 0em;
 }
 
 h3.warning {
