--- a/css/base-stylesheet.css
+++ b/css/base-stylesheet.css
@@ -51,7 +51,7 @@ h4, label.switch {
     margin: 2px 0px 0px 0px;
 }
 
-div {
+table {
     white-space: nowrap;
 }
 
@@ -65,6 +65,7 @@ div {
     cursor: pointer;
     margin-top: 2px;
     margin-right: 1px;
+    -webkit-user-drag: none;
 }
 
 #colorPicker{
@@ -91,6 +92,7 @@ div {
 	opacity: .9;
     margin-top: -8px;
     visibility: visible;
+    -webkit-user-drag: none;
 }
 
 /*
