--- a/css/options-stylesheet.css
+++ b/css/options-stylesheet.css
@@ -1,8 +1,9 @@
 body {
     width: auto;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 800px;
     height: auto;
-    margin: 25px;
     padding: 10px;
     outline: 2px solid #222;
     outline-offset: 14px;
